# Optimus

./: .gitignore  LICENSE  README  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: check-port.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  installer-hooks.nsh  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  cleaner.rs  core.rs  driver_store.rs  elevation.rs  ghost_devices.rs  icon_service.rs  ipc_commands.rs  main.rs  memory_purge.rs  msi_util.rs  net_tuning.rs  optimization.rs  power.rs  process.rs  settings_repo.rs  telemetry.rs  timer.rs  watchdog.rs
src-tauri/src/elevation/: elevated_payload_executor.rs  elevation_launcher.rs
src-tauri/src/ipc/: config_commands.rs  engine_commands.rs  mod.rs  optimization_commands.rs  process_commands.rs
src-tauri/src/msi_util/: pci_registry_read.rs  pci_registry_write.rs
src-tauri/src/net_tuning/: dns_tuning.rs  net_registry.rs
src-tauri/src/optimization/: backup_manager.rs  mmcss.rs
src-tauri/src/power/: core_parking.rs  powercfg_cli.rs  timers.rs
src-tauri/src/settings_repo/: io.rs  projection.rs
src-tauri/src/telemetry/: telemetry_hosts.rs  telemetry_services.rs  telemetry_tasks.rs
src-tauri/src/types/: engine_types.rs  hardware_types.rs  icon_types.rs  ipc_types.rs  mod.rs  optimization_types.rs  process_delta_types.rs  process_types.rs
src-tauri/src/utils/: mod.rs  pnputil_utils.rs  registry_cli.rs
src/components/: AppIcon.tsx  AppPickerDropdown.tsx  ElevationModal.tsx  EngineView.tsx  ErrorBoundary.tsx  HardwareActionModal.tsx  Layout.tsx  ModeSelector.tsx  OptimizationView.tsx  PopoverMenu.tsx  PrioritySelect.tsx  ProcessActionContext.tsx  ProcessGroupCard.tsx  ProcessRow.tsx  SafetyIntro.tsx  StatusPill.tsx  TitleBar.tsx  Toasts.tsx  TopNav.tsx  WindowChrome.tsx
src/components/engine/: DriverStorePanel.tsx  GhostDevicesPanel.tsx  MemoryPurgeCard.tsx  MsiPanel.tsx  TimerCard.tsx  ToggleSwitch.tsx
src/components/ui/: InfoTooltip.tsx
src/hooks/: useConfigBuilder.ts  useConfigCrud.ts  useConfigManager.ts  useConfigQueries.ts  useEngineAggregator.ts  useEngineManager.ts  useEngineQueries.ts  useHardwareControl.ts  useHardwareQueries.ts  useIconCache.ts  useIconObjectUrl.ts  useMemoryPurgeEngine.ts  useOptimizationEngine.ts  useOptimizationQueries.ts  usePollingScheduler.ts  useProcessManager.ts  useProcessQueries.ts  useTimerEngine.ts  useToastManager.ts  useTranslation.ts
src/lib/: queryClient.ts
src/locales/: en.ts  ru.ts  types.ts
src/store/: appStore.ts
src/types/: config.ts  engine.ts  hardware.ts  icon.ts  ipc.ts  process.ts
src/views/: HomeView.tsx  OnboardingView.tsx  SavedConfigsSection.tsx  SettingsView.tsx
