[package]
name = "optimus"
version = "0.1.0"
description = "Optimus"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Registry",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
thiserror = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
blake3 = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
