[package]
name = "optimus"
version = "0.2.0"
description = "Optimus"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_Registry",
  "Win32_System_Services",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
thiserror = "2"
tauri-plugin-dialog = "2"
log = "0.4"
blake3 = "1"
lru = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync"] }
winreg = "0.55"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
